--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@inlet/react-pixi": "^6.8.0",
     "@pixi/react": "^7.1.2",
     "pixi.js": "^7.4.2",
     "react": "^18.3.1",
