--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@inlet/react-pixi": "^6.8.0",
     "@pixi/react": "^7.1.2",
+    "howler": "^2.2.4",
     "pixi.js": "^7.4.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
